# LeX

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
gc-8.0.4/: CMakeLists.txt
gc-8.0.4/include/private/: gc_priv.h
src/: dfa.c  dfa.h  main.c  nfa.c  nfa.h
windows/: threads.h
